@@ -6,7 +6,7 @@ level = replication=warn
 #level = agency=debug
 #level = communication=trace
 #level = cluster=trace
-#level = threads=debug
+level = threads=debug
 #thread = true
 #use-microtime = true
 #foreground-tty = true
