@@ -1,6 +1,15 @@
 devel
 -----
 
+* changed the thread handling in the scheduler. `--server.threads` will be
+  the maximum number of threads for the scheduler.
+
+  The hidden option `--server.maximal-threads` is now obsolete.
+
+  The hidden options `--server.queue-size`, `--server.prioN-size` (N = 1 or 2)
+  control the size of the internal queues. The defaults are sensible, do not
+  change these settings.
+
 * replace JavaScript functions FULLTEXT, NEAR, WITHIN with regular AQL via a
   new optimizer rule.
 
